// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toastNotificationsReducer should handle adding and removing toast notifications: toast added 1`] = `
{
  "displayedToasts": 2,
  "toasts": [
    {
      "alertType": "success",
      "header": "Lorem",
      "message": "Lorem ipsum dolor",
      "persistent": undefined,
    },
    {
      "alertType": "success",
      "header": "Lorem",
      "message": "Lorem ipsum dolor",
      "persistent": undefined,
    },
  ],
}
`;

exports[`toastNotificationsReducer should handle adding and removing toast notifications: toast removed 1`] = `
{
  "displayedToasts": 2,
  "toasts": [
    {
      "alertType": "success",
      "header": "Lorem",
      "message": "Lorem ipsum dolor",
      "persistent": undefined,
      "removed": true,
    },
    {
      "alertType": "success",
      "header": "Lorem",
      "message": "Lorem ipsum dolor",
      "persistent": undefined,
    },
  ],
}
`;

exports[`toastNotificationsReducer should handle specific defined types: defined type TOAST_ADD 1`] = `
{
  "result": {
    "displayedToasts": 1,
    "toasts": [
      {
        "alertType": undefined,
        "header": undefined,
        "message": undefined,
        "persistent": undefined,
      },
    ],
  },
  "type": "TOAST_ADD",
}
`;

exports[`toastNotificationsReducer should handle specific defined types: defined type TOAST_PAUSE 1`] = `
{
  "result": {
    "displayedToasts": 0,
    "toasts": [],
  },
  "type": "TOAST_PAUSE",
}
`;

exports[`toastNotificationsReducer should handle specific defined types: defined type TOAST_REMOVE 1`] = `
{
  "result": {
    "displayedToasts": 0,
    "toasts": [],
  },
  "type": "TOAST_REMOVE",
}
`;

exports[`toastNotificationsReducer should handle specific defined types: defined type TOAST_RESUME 1`] = `
{
  "result": {
    "displayedToasts": 0,
    "toasts": [],
  },
  "type": "TOAST_RESUME",
}
`;
